--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -4,6 +4,7 @@
   <div class="card">  
     <h3 class="card-header">{{title}}
       <span class="head-style">Posted by {{user.username}} on {{format_date created_at}} <br>{{comments.length}} {{format_plural "comment" comments.length}}</span>
+      {{!-- {{vote_count}} --}}
     </h3>
       <div>
         {{content}}
