--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -14,11 +14,24 @@
     <a href="/"><ion-icon name="arrow-back-outline"></ion-icon>Back</a>
   </div>  
   </section>
+  {{!-- ----------------------------------------------------- --}}
+  <form class="comment-form">
+  <div>
+    <textarea name="comment-body"></textarea>
+  </div>
+
+  <div>
+    <button type="submit">add comment</button>
+    <button type="button" class="upvote-btn">upvote</button>
+  </div>
+</form>
+{{!-- ---------------------------------------------------------- --}}
   {{/if}}
   
 {{> comments post.comments}}
 
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
+<script src="/javascript/upvote.js"></script>
 {{/if}}
 <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
