vote and download complete

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -23,6 +23,7 @@
   <div>
     <button type="submit">add comment</button>
     <button type="button" class="upvote-btn">upvote</button>
+    <button type="button" class="downvote-btn">downvote</button>
   </div>
 </form>
 {{!-- ---------------------------------------------------------- --}}
@@ -33,5 +34,6 @@
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
 <script src="/javascript/upvote.js"></script>
+<script src="/javascript/downvote.js"></script>
 {{/if}}
 <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
