updated script tag

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -22,18 +22,26 @@
 
   <div>
     <button type="submit">add comment</button>
-    <button type="button" class="upvote-btn">upvote</button>
+    <button id="upvote "type="button" class="upvote-btn">upvote</button>
     <button type="button" class="downvote-btn">downvote</button>
   </div>
 </form>
 {{!-- ---------------------------------------------------------- --}}
+
+
+   
   {{/if}}
   
 {{> comments post.comments}}
 
 {{#if loggedIn}}
+
+
 <script src="/javascript/comment.js"></script>
 <script src="/javascript/upvote.js"></script>
 <script src="/javascript/downvote.js"></script>
+
+
+
 {{/if}}
 <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
