working on workout issues

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,6 +14,7 @@
     </form>
     <a href="/dashboard-list"><ion-icon name="arrow-back-outline"></ion-icon>Back</a>
   </div>  
+  <a href="/workout-list">workout</a>
   </section>
 
 
