--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -37,6 +37,12 @@
    {{post.down_vote_count}} {{format_plural "point" post.down_vote_count}} by you on {{format_date post.created_at}}
 </div>
 
+<div>
+  <p>work out</p>
+  {{workout.workout_title}}
+</div>
+
+
 
    
   {{/if}}
