--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,13 +1,23 @@
 
-<article class="post">  
- <a href="/post/{{id}}">
-  <div class="card">  
-    <h3 class="card-header">{{title}}
-      <span class="head-style">Posted by {{user.username}} on {{format_date created_at}} <br>{{comments.length}} {{format_plural "comment" comments.length}}</span>
-    </h3>
-      <div>
-        {{content}}
-      </div>      
+
+<div class="ui stackable grid container">
+  <div class="column">
+  <div class="ui cards">
+    <div class="content">
+        <div class="header">{{user.username}}</div>
+        <div>
+          {{title}}
+        </div>
+        <div class="description">
+          <p>{{content}}</p>
+        </div>
+        <div class="meta">
+          <a class="like">
+            <i class="like icon"></i> 3 Likes
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
-  </a> 
-</article>
+  </div>
+</div>
