updates on drop down fields

--- a/views/workout-list.handlebars
+++ b/views/workout-list.handlebars
@@ -40,6 +40,16 @@
   </select>
 </div>
 
+<div>
+  <select>
+    {{!-- {{#each exercises}} --}}
+    <option>      
+      test     
+    </option>
+    {{!-- {{/each}} --}}
+  </select>
+</div>
+
 
 
 <div style="text-align: center;">
