--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,14 +31,16 @@
     </h1>      
   </header>
  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>           
   <div class="wrapper">
     <main>
       {{{ body }}}
     </main>
   </div>
 
-  {{#if loggedIn}}            
+  {{#if loggedIn}} 
   <script src="/javascript/logout.js"></script>
   {{/if}}
 </body>
+
 </html>
