--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,12 +23,12 @@
         <a href="/dashboard-list" class="item">Dashboard</a>
         <a href="/profile" class="item">My Profile</a>
         <div class="right menu">
-         <div class="item">
+         {{!-- <div class="item">
           <div class="ui icon input">
             <input type="text" placeholder="Search...">
             <i class="search link icon"></i>
           </div>
-        </div> 
+        </div>  --}}
         <a id="logout" class="item">Logout</a>
         </div>
         {{else}}
