--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -6,8 +6,13 @@
       <span class="head-style">Posted by {{user.username}} on {{format_date created_at}} <br>{{comments.length}} {{format_plural "comment" comments.length}}</span>      
     </h3>
       <div>
-        {{content}}        
-      </div>      
+        {{content}}                  
+      </div>           
   </div>
+  <div>
+    
+  </div>
+  
  </a>
+
 </article>
