--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,8 @@
   {{#each posts as |post| }}  
   <div class="item">    
     {{> post-info post }}          
-  </div>  
+  </div> 
+  likes {{post.vote_count}}  Dislikes {{post.down_vote_count}} 
    {{/each}}  
 </div>
 
