--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 
-<h2>Community Feed</h2>
+<h2 class="">Community Feed</h2>
 
 <div class="ui relaxed divided list">
   {{#each posts as |post| }}  
