--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -16,3 +16,25 @@
  </a>
 
 </article>
+
+{{!-- <div class="ui stackable grid container">
+  <div class="column">
+  <div class="ui cards">
+    <div class="content">
+        <div class="header">{{user.username}}</div>
+        <div>
+          {{title}}
+        </div>
+        <div class="description">
+          <p>{{content}}</p>
+        </div>
+        <div class="meta">
+          <a class="like">
+            <i class="like icon"></i> {{post.vote_count}} 
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+</div> --}}
