--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -200,7 +200,7 @@ margin-bottom: 3%;
 
 
 .card {
-  margin: 0 0 10px 0;
+  margin: 90px;
   border: 3px solid var(--dark);
   border-radius: var(--border-radius);
 }
