--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,7 @@
     
     <link rel="stylesheet" href="/stylesheets/feed.css">
   <title>Fitness Flow</title>  
+  
 </head>
 
 <body>  
@@ -21,14 +22,8 @@
         {{#if loggedIn}}
         <a href="/" class="item">Home</a>
         <a href="/dashboard-list" class="item">Dashboard</a>
-        <a href="/profile" class="item">My Profile</a>
+        {{!-- <a href="/profile" class="item">My Profile</a> --}}
         <div class="right menu">
-         {{!-- <div class="item">
-          <div class="ui icon input">
-            <input type="text" placeholder="Search...">
-            <i class="search link icon"></i>
-          </div>
-        </div>  --}}
         <a id="logout" class="item">Logout</a>
         </div>
         {{else}}
@@ -41,7 +36,7 @@
     </nav>
   </div>
      <h1>
-      <a href="/" class="app-title">Fitness Flow</a>
+      <img src="img/FitnessFlow_logo_6.png" alt="logo" />
     </h1>      
   </header>
  
