--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,11 +33,13 @@
         <a href="/login" class="item">Login</a>
         </div>
         {{/if}}
+          
     </nav>
+        <div>          
+            <img src="/img/FitnessFlow_logo_6.png" alt="logo" />          
+        </div> 
   </div>
-     <h1>
-      <img src="img/FitnessFlow_logo_6.png" alt="logo" />
-    </h1>      
+       
   </header>
  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>           
