--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -9,7 +9,14 @@
         <label class="form-label" for="comment-body">Comment</label>
         <textarea class="form-input" type="text" id="comment" name="comment-body" autofocus="true"></textarea>
       </div>
-      <button type="submit" class="btn-login">Submit</button>        
+      <button type="submit" class="btn-login">Submit</button>
+      <button id="upvote "type="button" class="upvote-btn"><ion-icon name="thumbs-up"></ion-icon></button>
+      <button type="button" class="downvote-btn"><ion-icon name="thumbs-down"></ion-icon></button>
+      <div>
+          {{post.vote_count}} Liked by you on {{format_date post.created_at}}<br>
+          {{post.down_vote_count}} Disliked by you on {{format_date post.created_at}}
+      </div>
+            
     </form>
     <a href="/"><ion-icon name="arrow-back-outline"></ion-icon>Back</a>
   </div>  
@@ -21,9 +28,11 @@
   </div>
 
   <div>
-    <button type="submit">add comment</button>
-    <button id="upvote "type="button" class="upvote-btn">upvote</button>
-    <button type="button" class="downvote-btn">downvote</button>
+    <button type="submit">Submit</button>
+    <button id="upvote "type="button" class="upvote-btn"><ion-icon name="thumbs-up"></ion-icon></button>
+    <button type="button" class="downvote-btn"><ion-icon name="thumbs-down"></ion-icon></button>
+      {{post.vote_count}} Liked by you on {{format_date post.created_at}}
+
   </div>
 </form>
 {{!-- ---------------------------------------------------------- --}}
