--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -243,7 +243,7 @@ margin-bottom: 3%;
   padding: 3%;
   margin: 5px 0;
   font-size: 1.2rem;
-  border: 2px solid var(--light-dark);
+  /* border: 2px solid var(--light-dark); */
   border-radius: var(--border-radius);
 }
 .form-input-login {
@@ -251,7 +251,7 @@ margin-bottom: 3%;
   padding: 5px;
   margin: 5px 0;
   font-size: 1.2rem;
-  border: 2px solid var(--light-dark);
+  /* border: 2px solid var(--light-dark); */
   border-radius: var(--border-radius);
 }
 
