--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,9 @@
   <div class="item">    
     {{> post-info post }}          
   </div> 
-  likes {{post.vote_count}}  Dislikes {{post.down_vote_count}} 
+  <ion-icon name="thumbs-up"></ion-icon> {{post.vote_count}}  <ion-icon name="thumbs-down"></ion-icon>{{post.down_vote_count}} 
    {{/each}}  
 </div>
 
+
+<script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
