--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,7 +3,7 @@
     <form id="profile" class="card-body">
            <div>
         <label class="form-label" for="profile-name">Name:</label>
-        <input class="form-input-profile" type="email" id="email-signup" autofocus="true"/>
+        <input class="form-input-profile" type="name" id="profile-name" autofocus="true"/>
       </div>
       <div>
         <label class="form-label" for="profile-age">Age:</label>
@@ -23,6 +23,7 @@
       </div>
       <button type="submit" class="btn-save">Save Profile!</button>        
     </form>
+    <a href="/profile-view/edit/1" class="edit-link">updater</a>
     <a href="/login" class="form-a">Login instead</a>
 </div>
 </form>
