--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,11 +18,12 @@
   <header class="hero">
   <div class="container">
     <nav class="ui secondary  menu">
-        {{#if loggedIn}}
+        {{#if loggedIn}}        
         <a href="/" class="item">Home</a>
         <a href="/dashboard-list" class="item">Dashboard</a>
-        <a href="/profile-view/" class="item">My Profile</a>
+        <a href="/profile-view/edit/id" class="item">My Profile</a>
         <div class="right menu">
+          
          {{!-- <div class="item">
           <div class="ui icon input">
             <input type="text" placeholder="Search...">
