--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,30 +1,34 @@
   <div class="profile-page">
-   <h4 class="card-header text-uppercase">My Profile</h4>
+   <h4 class="card-header text-uppercase">Your Profile</h4>
     <form id="profile" class="card-body">
            <div>
         <label class="form-label" for="profile-name">Name:</label>
-        <input class="form-input-profile" type="name" id="profile-name" autofocus="true"/>
+        <input class="form-input-profile" type="text" id="profile-name" name="profile-name" autofocus="true"/>
       </div>
       <div>
         <label class="form-label" for="profile-age">Age:</label>
-        <input class="form-input-profile"type="text" id="profile-age" />
+        <input class="form-input-profile"type="text" id="profile-age" name="profile-age" "/>
       </div> 
       <div>
         <label class="form-label" for="profile-height">Height:</label>
-        <input class="form-input-profile" type="password" id="profile-height" />
+        <input class="form-input-profile" type="text" id="profile-height" name="profile-height" " />
       </div>
       <div>
         <label class="form-label" for="profile-weight">Weight:</label>
-        <input class="form-input-profile" type="weight" id="profile-weight" />
+        <input class="form-input-profile" type="text" id="profile-weight" name="profile-weight"  />
       </div>
       <div>
-        <label class="form-label" for="favorite-workout">Favorite Workout:</label>
-        <input class="form-input-profile" type="password" id="favorite-workout" />
+        <label class="form-label" for="profile-workout">Favorite Workout:</label>
+        <input class="form-input-profile" type="text" id="profile-workout" name="profile-workout" />
       </div>
-      <button type="submit" class="btn-save">Save Profile!</button>        
+            <button type="submit" class="btn-save" id="profile">Save Profile!</button>  
     </form>
+    
     <a href="/profile-view/edit/1" class="edit-link">updater</a>
     <a href="/login" class="form-a">Login instead</a>
 </div>
+
 </form>
-<script src="/javascript/signup.js"></script>
+
+
+<script src="/javascript/add-profile.js"></script>
