--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,7 @@
           
     </nav>
         <div>          
-            <img src="/img/FitnessFlow_logo_6.png" alt="logo" />          
+            <img class ="logo" src="/img/FitnessFlow_logo_6.png" alt="logo" />          
         </div> 
   </div>
        
