--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
         {{#if loggedIn}}        
         <a href="/" class="item">Home</a>
         <a href="/dashboard-list" class="item">Dashboard</a>
-        <a href="/profile-view/edit/id" class="item">My Profile</a>
+        <a href="/profile-view/" class="item">My Profile</a>
         <div class="right menu">
           
          {{!-- <div class="item">
