--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
         {{#if loggedIn}}        
         <a href="/" class="item">Home</a>
         <a href="/dashboard-list" class="item">Dashboard</a>
-        <a href="/profile-view/" class="item">My Profile</a>
+        <a href="/profile-view/edit/" class="item" id="edit-profile">My Profile</a>
         <div class="right menu">
           
          {{!-- <div class="item">
@@ -48,7 +48,8 @@
  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>           
   <div class="wrapper">
-    <main>
+    
+    <main>      
       {{{ body }}}
     </main>
   </div>
@@ -57,7 +58,10 @@
   <script src="/javascript/logout.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
   {{/if}}
-  
+
+
 </body>
+
+
 
 </html>
