--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,11 +3,12 @@
     <form id="profile" class="card-body">
            <div>
         <label class="form-label" for="profile-name">Name:</label>
-        <input class="form-input-profile" type="text" id="profile-name" name="profile-name" autofocus="true"/>
+        <input class="form-input-profile" type="text" id="profile-name" name="profile-name" autofocus="true" />
+       
       </div>
       <div>
         <label class="form-label" for="profile-age">Age:</label>
-        <input class="form-input-profile"type="text" id="profile-age" name="profile-age" "/>
+        <input class="form-input-profile"type="text" id="profile-age" name="profile-age"/>
       </div> 
       <div>
         <label class="form-label" for="profile-height">Height:</label>
