--- a/views/edit-profile.handlebars
+++ b/views/edit-profile.handlebars
@@ -23,6 +23,36 @@
       </div>
             <button type="submit" class="btn-save" id="edit-profile">Edit Profile!</button>  
     </form>
+
+    {{#each profile.user_profile}}
+    {{username}}
+    {{/each}}
+
+    {{!-- {{#each profile.profile_profile}} --}}
+    {{#each profile.post_profile}}
+    
+    {{name}}
+    {{/each}}
+    {{!-- {{/each}} --}}
+  
+   
+    
+    
+  
+
+  
+
+    <div>
+    <select id="workout_id">
+      {{#each workouts as | workout |}}
+      {{#each exercises}}
+      <option value="{{id}}">      
+        {{workout.workout_title}} - {{exercise_title}}
+      </option>
+      {{/each}}
+      {{/each}}
+    </select>
+  </div>
     
     
     <a href="/dashboard-list" class="form-a">back</a>
